move script tag to head

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset = "UTF-8">
     <title>TWIDDLER - A BLATANT TWITTER CLONE</title>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js" defer></script>
   </head>
 
   <body>
     <p>This is Twiddler</p>
-    <script src="scripts.js"></script>
+    <div></div>
   </body>
 </html>
