--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
 
   <body>
-    <h1>Twiddler</h1>
-    <div id="timeline"></div>
+    <div class="container">
+      <h1>Twiddler</h1>
+      <div id="timeline"></div>
+    </div>
   </body>
 </html>
