add navbar with dummy buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 
   <body>
     <div class="container">
-      <h1>Twiddler</h1>
+      <div id="navbar">
+        <h1>Twiddler</h1>
+        <div class="button">FUNCTION1</div>
+        <div class="button">FUNCTION2</div>
+        <div class="button">FUNCTION3</div>
+        <div class="button">FUNCTION4</div>
+        <div class="button">FUNCTION5</div>
+      </div>
       <div id="timeline"></div>
     </div>
   </body>
