update navbar divs to buttons

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
       <div id="navbar">
         <h1>Twiddler</h1>
-        <div class="button">FUNCTION1</div>
-        <div class="button">FUNCTION2</div>
-        <div class="button">FUNCTION3</div>
-        <div class="button">FUNCTION4</div>
-        <div class="button">FUNCTION5</div>
+        <button class="button">GENERATE</button>
+        <button class="button">FUNCTION2</button>
+        <button class="button">FUNCTION3</button>
+        <button class="button">FUNCTION4</button>
+        <button class="button">FUNCTION5</button>
       </div>
       <div id="timeline"></div>
     </div>
