--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
       <div id="navbar">
         <h1>Twiddler</h1>
-        <button class="button" id="generate">GENERATE</button>
-        <button class="button" id="update">UPDATE</button>
-        <button class="button">FUNCTION3</button>
-        <button class="button">FUNCTION4</button>
-        <button class="button">FUNCTION5</button>
+        <button type="button" class="button" id="generate">GENERATE</button>
+        <button type="button" class="button" id="update">UPDATE</button>
+        <button type="button" class="button">FUNCTION3</button>
+        <button type="button" class="button">FUNCTION4</button>
+        <button type="button" class="button">FUNCTION5</button>
       </div>
       <div id="timeline"></div>
     </div>
