--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
         <button type="button" class="button">FUNCTION4</button>
         <button type="button" class="button">FUNCTION5</button>
       </div>
+      <div>
+        <fieldset>
+          <legend>CREATE A TWEET</legend>
+          <label for="user">User</label>
+          <input type="text" name="user" id="user">
+
+          <label for="title">Title</label>
+          <input type="text" name="title" id="title">
+
+          <label for="date">Date</label>
+          <input type="date" name="date" id="date">
+
+          <label for="body">What's happening?</label>
+          <input type="text" name="body" id="body">
+
+          <button type="button">Post</button>
+        </fieldset>
+      </div>
       <div id="timeline"></div>
     </div>
   </body>
