remove generate button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
       <div id="navbar">
         <h1>Twiddler</h1>
-        <button type="button" class="button" id="generate">GENERATE</button>
         <button type="button" class="button" id="update">UPDATE</button>
+        <button type="button" class="button">FUNCTION2</button>
         <button type="button" class="button">FUNCTION3</button>
         <button type="button" class="button">FUNCTION4</button>
         <button type="button" class="button">FUNCTION5</button>
