add compose tweet functionality

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <label for="body">What's happening?</label>
           <input type="text" name="body" id="body">
 
-          <button type="button">Post</button>
+          <button type="button" id="submit">Post</button>
         </fieldset>
       </div>
       <div id="timeline"></div>
